--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1 class="name">Tillson Galloway</h1>
     <h2 class="dev">15 Year Old iOS and Web Developer</h2>
     
-    <h2><a href="http://twitter.com/tillson_">Twitter</a> | <a href="http://github.com/tillson">GitHub</a> | <a href="mailto:tillsongalloway+contact@gmail.com">Contact</a></h2>
+    <h2><a href="http://twitter.com/tillson_">Twitter</a> | <a href="http://github.com/tillson">GitHub</a> | <a href="mailto:tillsongalloway+contact@gmail.com">Contact/Support</a></h2>
     
     <hr>
 </body>
