--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <html lang="en">
 <head>
-
-
-<script type="text/javascript" src="/static/js/analytics.js"></script>
-<script type="text/javascript">archive_analytics.values.server_name="wwwb-app13.us.archive.org";archive_analytics.values.server_ms=1215;</script>
-<link type="text/css" rel="stylesheet" href="/static/css/banner-styles.css"/>
-
-
   <meta charset="UTF-8">
   <title>Tillson Galloway</title>
   <meta name="description" content="Tillson is an iOS and web developer from Charleston, SC.">
   <meta name="keywords" content="iOS,Web,NodeJS,WWDC,Developer,Swift,Computer Science">
   <meta name="author" content="Tillson Galloway">
-  <link href="bootstrap-grid.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="css/bootstrap-grid.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <h1 class="name">Tillson Galloway</h1>
@@ -22,8 +15,8 @@
   <span class="dev">Security Enthusiast</span>
   <br>
   <span class="dev">WWDC 2014, 2015, &amp; 2016 Scholarship Recipient</span>
-  <h2 class="contact"><a href="/web/20161024152305/http://twitter.com/tillson_">Twitter</a> | <a href="/web/20161024152305/http://github.com/tillson">GitHub</a>
-    | <a href="mailto:mail@tillsongalloway.com">Contact</a> | <a href="/web/20161024152305/https://tillsongalloway.com/blog">Blog</a></h2>
+  <h2 class="contact"><a href="https://twitter.com/tillson_">Twitter</a> | <a href="https://github.com/tillson">GitHub</a>
+    | <a href="mailto:mail@tillsongalloway.com">Contact</a> | <a href="/blog">Blog</a></h2>
   <hr style="width: 50%">
 
   <h1>Portfolio</h1>
@@ -32,7 +25,7 @@
       <div class="col-md-4">
         <h2> Math Timed Test </h2>
         <img style="width: 80%;" src="images/timedtest.png" alt="Timed Test Screenshot"/>
-        <p> <a href="/web/20161024152305/https://itunes.apple.com/us/app/math-timed-test/id925511195?mt=8" target="_blank">Math Timed Test</a> is an iPad app designed to help the younger students
+        <p> <a href="https://itunes.apple.com/us/app/math-timed-test/id925511195?mt=8" target="_blank">Math Timed Test</a> is an iPad app designed to help the younger students
           at my school to learn and be assessed on their addition, subtraction, and multiplication math facts.  The app
           was my first assignment on an independent project for Porter-Gaud's Computer Science I course.
           Written completely in <b>Swift</b>, the app is available for free on the iOS App Store.
@@ -50,7 +43,7 @@
         which the entire school could use.  The second iteration stood alongside the original, mainly being created to
         provide an API so future iOS and Watch apps can take advantage of it.  The former is written in <b>Javascript</b>, while the latter
         was written in <b>Node.js</b> taking advantage of the <b>MEAN</b> stack (<b>Mongo, Express, Angular, and Node</b>).
-        The second one is <b>open source</b> (available <a href="/web/20161024152305/https://github.com/ireallydontcare/pg-schedule" target="_blank">here</a>)
+        The second one is <b>open source</b> (available <a href="https://github.com/ireallydontcare/pg-schedule" target="_blank">here</a>)
         so other students can contribute and tweak the API to their liking.
         </p>
       </div>
@@ -61,7 +54,7 @@
         students to attend WWDC with a free conference ticket.  Throughout both years, I have been an active member in our Slack and Facebook
         groups designed for us to communicate with each other.  While the 2014 app was written in <b>Objective-C</b>,
         the 2015 version was written entirely in <b>Swift</b>, Apple's new programming language. The 2015 app is open source,
-        available <a href="/web/20161024152305/https://github.com/tillson/wwdc-2015" target="_blank">here</a> on Github.
+        available <a href="https://github.com/tillson/wwdc-2015" target="_blank">here</a> on Github.
         </p>
       </div>
     </div>
@@ -85,10 +78,10 @@
           perfectly, and at 8:45 EST on April 14, dozens of people recieved an Twilio SMS message.  The app was written after
           school one day, partially thanks to Mountain Dew and some pizza.<br><br>
 
-          I wrote a second <b>Node</b> app after submissions were due to send a <a href="/web/20161024152305/http://justyo.co/" target="_blank">Yo</a> notification to
+          I wrote a second <b>Node</b> app after submissions were due to send a <a href="http://justyo.co/" target="_blank">Yo</a> notification to
           users as soon as their WWDC scholarship status email arrived.  The app checked the Gmail API to see if the
           email had arrived, and would activate if it did. The core functionality was hacked together in just a night,
-          and <a href="/web/20161024152305/http://www2.meethue.com/" target="_blank">Philips Hue</a> integration was added the next day.  The Hue integration blinked the
+          and <a href="http://www2.meethue.com/" target="_blank">Philips Hue</a> integration was added the next day.  The Hue integration blinked the
           home's lights green or red based if the user was accepted or not.  The entire app is <a href="/web/20161024152305/https://github.com/tillson/dubdubyo" target="_blank">open source on Github</a>.
         </p>
       </div>
