--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     | <a href="mailto:mail@tillsongalloway.com">Contact</a> | <a href="/blog">Blog</a></h2>
   <hr style="width: 50%">
 
-  <h1>Portfolio</h1>
+  <!-- <h1>Portfolio</h1>
   <div class="container">
     <div class="row">
       <div class="col-md-4">
@@ -60,17 +60,6 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <h2> PG Progress Reports </h2>
-        <img style="width: 100%;" src="images/progress.png" alt="Progress Report Webpage"/>
-        <p>For my second project in 9th grade Computer Science I, I created a website written in <b>PHP</b> to help teachers send
-        progress reports to student's and their parents.  Instead of manually gathering data about a student (parents, homeroom teacher, etc.),
-        all that they are required to input in this app is the student's name and their own name.  From there, the app automatically
-        finds the names and emails of the student's parents, homeroom teacher, the principal, and the dean.  The app seamlessly works
-        between Middle and High school students, filling the appropriate dean/principal information for each one.  The main page
-        also features a typeahead (written with <b>jQuery</b> and <b>Javascript</b>) to filter the names of students and teachers.
-        </p>
-      </div>
-      <div class="col-md-4">
         <h2> WWDC Alerts </h2>
         <img style="width: 100%;" src="images/wwdcupdate.png" alt="Progress Report Webpage"/>
         <p>Before WWDC 2015 was announced by Apple, I wrote an app in <b>Node</b> (also using the <b>MEAN</b> stack)
@@ -86,7 +75,7 @@
         </p>
       </div>
     </div>
-  </div>
+  </div> -->
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
