fix blog post typo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=51060838e1">
+    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=07245e306a">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="canonical" href="index.html">
@@ -81,7 +81,7 @@
         <a class="post-card-content-link" href="taoism-in-slaughterhouse-five/">
             <header class="post-card-header">
                     <span class="post-card-tags">philosophy</span>
-                <h2 class="post-card-title">Nothing Lasts, but Nothing is Lost: The Taoist Ideals of Slaughterhouse Five’s Tralfamadorians</h2>
+                <h2 class="post-card-title">Nothing Lasts, but Nothing is Lost: Taoist Ideology in Slaughterhouse Five’s Tralfamadorians</h2>
             </header>
             <section class="post-card-excerpt">
                 <p>The Tralfamadorian worldview of Slaughterhouse Five fame surrenders to time's unrelenting waters, its central axiom being that “the moment simply is."  Tralfamadorian physics lead us to question our perceptions of time.</p>
@@ -166,9 +166,9 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="assets/built/jquery.fitvids.js?v=51060838e1"></script>
+    <script type="text/javascript" src="assets/built/jquery.fitvids.js?v=07245e306a"></script>
 
-    <script src="assets/built/infinitescroll.js?v=51060838e1"></script>
+    <script src="assets/built/infinitescroll.js?v=07245e306a"></script>
 
     
 
