--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <hr />
-            <div class="row">
+            <!---<div class="row">
                 <div class="col">
                     <h3>Publications</h3>
                     <ul>
@@ -70,7 +70,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> --->
             <div class="row">
                 <div class="col">
                     <h3>Open-source Projects</h3>
