--- a/index.html
+++ b/index.html
@@ -81,6 +81,32 @@
                     </ul>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+                    <h3>Talks</h3>
+                    <ul>
+                        <li>
+			    DEFCON 30 Recon Village, 2022
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h3>Awards</h3>
+                    <ul>
+                        <li>
+			    First Place / Best Pitch, Georgia Tech Ideas2Serve 2020
+                        </li>
+                        <li>
+			    First Place, Clemson CUHackit 2019
+                        </li>
+                        <li>
+			    Recipient, Apple Worldwide Developers Confererence Student Scholarship 2014-2016
+                        </li>
+                    </ul>
+                </div>
+            </div>
  
         </main>
 
