--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                         I'm a PhD student at Georgia Tech advised by Manos Antonakakis in the School of Electrical and Computer Engineering. 
                         <br />
                         My research focuses on operational solutions for problems in network security, including attacker detection, attacker attribution, and machine learning system robustness.
-                        I'm also the president of <a href="https://greyhat.gatech.edu">GreyHat,</a> Georgia Tech's computer security club.
+                        <br />
+                        I'm also a co-founder of <a href="https://greyhat.gatech.edu">SecretSurfer</a>, a small consulting and auditing company for finding sensitive information exposed across the internet.
                         <br /><br />
                         <h4>Contact</h4>
                         <b>Email:</b> tillson@gatech.edu
@@ -73,7 +74,7 @@
             </div> --->
             <div class="row">
                 <div class="col">
-                    <h3>Open-source Projects</h3>
+                    <h4>Open-source Projects</h4>
                     <ul>
                         <li>
                             <b>GitHound</b> (<a href="https://github.com/tillson/git-hound">GitHub</a>, <a href="finding-sensitive-information-on-github/">blog post</a>)<br />
@@ -83,26 +84,45 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <h3>Talks</h3>
+                    <h4>Companies</h4>
                     <ul>
                         <li>
-			    DEFCON 30 Recon Village, 2022
+                            <b>SecretSurfer</b> (<a href="https://secretsurfer.xyz">website</a>)<br />
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <h3>Awards</h3>
+                    <h4>Talks</h4>
                     <ul>
                         <li>
-			    First Place / Best Pitch, Georgia Tech Ideas2Serve 2020
+			    <b>New Frontiers in Github Secret Snatching</b>, <a href="https://reconvillage.org/recon-village-def-con-30-2022/">DEFCON 30 Recon Village,</a> 2022
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h4>Awards</h4>
+                    <ul>
+                        <li>
+                            <b>Best Cybersecurity Startup</b>, Georgia Tech Klaus Startup Challenge 2023
+                                        <ul>
+                                            Award: $25,000
+                                        </ul>
+                                    </li>            
+                        <li>
+			    <b>First Place / Best Pitch</b>, Georgia Tech Ideas2Serve 2020
+                            <ul>
+                                Award: $1,000
+                            </ul>
                         </li>
                         <li>
-			    First Place, Clemson CUHackit 2019
+			    <b>First Place</b>, Clemson CUHackit 2019
                         </li>
                         <li>
-			    Recipient, Apple Worldwide Developers Confererence Student Scholarship 2014-2016
+			    <b>Recipient</b>, Apple Worldwide Developers Confererence Student Scholarship 2014-2016
                         </li>
                     </ul>
                 </div>
