--- a/index.html
+++ b/index.html
@@ -127,13 +127,21 @@
                     </ul>
                 </div>
             </div>
- 
+             <div class="row">
+                <div class="col">
+                    <h4>CVEs</h4>
+                    <ul>
+                        <li>CVE-2023-36888 (CVSS score 6.6)</li>            
+                    </ul>
+                </div>
+            </div>
+
         </main>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-12 col-md">
-                    <small class="d-block mb-3 text-muted">Last updated January 2023 </small>
+                    <small class="d-block mb-3 text-muted">Last updated July 2023 </small>
                 </div>
             </div>
         </footer>
