--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <br />
                         My research focuses on operational solutions for problems in network security, including attacker detection, attacker attribution, and machine learning system robustness.
                         <br />
-                        I'm also a co-founder of <a href="https://greyhat.gatech.edu">SecretSurfer</a>, a small consulting and auditing company for finding sensitive information exposed across the internet.
+			I am also a reserach intern at <a href="https://corelight.com/">Corelight</a>. Previously, I interned at Meta as a software engineering intern on the Integrity team and at New Relic as a security intern on the Product Security team.
                         <br /><br />
                         <h4>Contact</h4>
                         <b>Email:</b> tillson@gatech.edu
