--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col">
                     <h3>About me</h3>
                     <p>
-                        I'm a PhD student at Georgia Tech in the <a href="https://coeus.ece.gatech.edu/">COEUS lab</a>a> in the School of Electrical and Computer Engineering. 
+                        I'm a PhD student at Georgia Tech in the <a href="https://coeus.ece.gatech.edu/">COEUS lab</a>a>, which resides in the School of Electrical and Computer Engineering. 
                         <br />
                         My research focuses on operational solutions for problems in network security, including attacker detection, attacker attribution, and machine learning system robustness.
                         <br />
