--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
                 </div>
             </div>
             <hr />
-            <!---<div class="row">
+            <div class="row">
                 <div class="col">
                     <h3>Publications</h3>
                     <ul>
                         <li>
                             <b>Practical Attacks Against DNS Reputation Systems.</b><br />
                             <b>Tillson Galloway,</b> Kleanthis Karakolios, Zane Ma, Roberto Perdisci, Angelos Keromytis, Manos Antonakakis<br />
-                            <i>Currently under review.</i>
+                            <i>To appear at the <a href="https://sp2024.ieee-security.org/">45th IEEE Symposium on Security and Privacy</a>, May 2024</i>
                         </li>
                     </ul>
                 </div>
-            </div> --->
+            </div>
             <div class="row">
                 <div class="col">
                     <h4>Open-source Projects</h4>
