--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h4>Publications</h4>
                     <ul>
                         <li>
-                            <b><a href="./sp2024winter-final30.pdf" target="_blank">Practical Attacks Against DNS Reputation Systems.</a></b><br />
+                            <b><a href="./sp2024winter-final30.pdf" target="_blank">Practical Attacks Against DNS Reputation Systems</a></b><br />
                             <b>Tillson Galloway,</b> Kleanthis Karakolios, Zane Ma, Roberto Perdisci, Angelos Keromytis, Manos Antonakakis<br />
                             <i><a href="https://sp2024.ieee-security.org/">45th IEEE Symposium on Security and Privacy</a>, May 2024</i>
                         </li>
