--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h4>Talks</h4>
                     <ul>
                         <li>
-			    <b>New Frontiers in Github Secret Snatching</b>, <a href="https://reconvillage.org/recon-village-def-con-30-2022/">DEFCON 30 Recon Village,</a> 2022
+			    <b>New Frontiers in Github Secret Snatching</b>, <a href="https://www.reconvillage.org/talks-2022">DEFCON 30 Recon Village,</a> 2022
                         </li>
                     </ul>
                 </div>
