--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h4>Other Projects</h4>
                     <ul>
                         <li>
-                            <b>SecretSurfer</b> (<a href="https://secretsurfer.xyz">website</a>)<br />
+                            <b>GitHound Explore</b> (<a href="https://githoundexplore.com">website</a>)<br />
                         </li>
                     </ul>
                 </div>
