--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                     <a class="me-3 py-2 text-dark text-decoration-none" href="blog">Blog</a>
                     <a class="me-3 py-2 text-dark text-decoration-none" href="https://github.com/tillson">GitHub</a>
-                    <a class="me-3 py-2 text-dark text-decoration-none" href="CV.pdf">CV</a>
+<!--                     <a class="me-3 py-2 text-dark text-decoration-none" href="CV.pdf">CV</a> -->
                     <a class="py-2 text-dark text-decoration-none" href="https://twitter.com/tillson_">Twitter</a>
                 </nav>
             </div>
