--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			I am also a research intern at <a href="https://corelight.com/">Corelight</a>. Previously, I interned at Meta as a software engineering intern on the Integrity team and at New Relic as a security intern on the Product Security team.
                         <br /><br />
                         <h4>Contact</h4>
-                        <b>Email:</b> tillson@gatech.edu
+                        <b>Email:</b> tillson@gatech.edu or me@tillsongalloway.com
                     </p>
                 </div>
                 <div class="col-3">
