--- a/index.html
+++ b/index.html
@@ -110,9 +110,18 @@
                     <h4>Awards</h4>
                     <ul>
                         <li>
+                            <b>First Place</b>, Obsidian Security CTF, BlackHat 2025
+                                    </li>            
+                        <li>
+                        <li>
+                            <b>First Place</b>, Vectra.AI CTF, BlackHat 2025
+                                    </li>            
+                        <li>
+
+                        <li>
                             <b>Best Cybersecurity Startup</b>, Georgia Tech Klaus Startup Challenge 2023
                                         <ul>
-                                            Award: $25,000
+                                            Award: $25,000 (investment opportunity)
                                         </ul>
                                     </li>            
                         <li>
