--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
                     <ul>
                         <li>
                             <b>First Place</b>, Obsidian Security CTF, BlackHat 2025
-                                    </li>            
-                            <b>First Place</b>, Vectra.AI CTF, BlackHat 2025
+                                    </li>  
+						<li>
+                            <b>First Place</b>, Vectra AI CTF, BlackHat 2024
                                     </li>            
                         <li>
                             <b>Best Cybersecurity Startup</b>, Georgia Tech Klaus Startup Challenge 2023
