--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
                     <h4>Awards</h4>
                     <ul>
                         <li>
-                            <b>First Place</b>, Obsidian Security CTF, BlackHat 2025
+                            <b>First Place</b>, Obsidian Security CTF ($10K prize), BlackHat 2025
                                     </li>  
 						<li>
-                            <b>First Place</b>, Vectra AI CTF, BlackHat 2024
+                            <b>First Place</b>, Vectra AI CTF ($3.5K prize), BlackHat 2024
                                     </li>            
                         <li>
-                            <b>Best Cybersecurity Startup</b>, Georgia Tech Klaus Startup Challenge 2023
+                            <b>Best Cybersecurity Startup ($25K investment prize)</b>, Georgia Tech Klaus Startup Challenge 2023
 <!--                                         <ul>
                                             Award: $25,000 (investment opportunity)
                                         </ul>
                                     </li>             -->
                         <li>
-			    <b>First Place / Best Pitch</b>, Georgia Tech Ideas2Serve 2020
+			    <b>First Place / Best Pitch ($1K prize)</b>, Georgia Tech Ideas2Serve 2020
 <!--                             <ul>
                                 Award: $1,000
                             </ul>
