--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                     <h4>Publications</h4>
                     <ul>
                         <li>
+                            <b><a href="https://angelosk.github.io/Papers/2025/Atropos_Final.pdf" target="_blank">From Concealment to Exposure: Understanding the Lifecycle and Infrastructure of APT Domains</a></b> (<a href="https://scholar.google.com/scholar?hl=en&as_sdt=0%2C11&q=From+Concealment+to+Exposure%3A+Understanding+the+Lifecycle+and+Infrastructure+of+APT+Domains&btnG=#">cite</a>)<br />
+                            Athanasios Avgetidis, Aaron Faulkenberry, Vinny Adjibi, <b>Tillson Galloway</b>, Panagiotis Kintis, Omar Alrawi, Zane Ma, Fabian Monrose, Angelos D Keromytis, Roberto Perdisci, Manos Antonakakis<br />
+                            <i><a href="https://sp2024.ieee-security.org/">2025 Research in Attacks, Intrusions and Defenses (RAID)</a>, October 2025</i>
+                        </li>
+                        <li>
                             <b><a href="./sp2024winter-final30.pdf" target="_blank">Practical Attacks Against DNS Reputation Systems</a></b> (<a href="https://www.computer.org/csdl/proceedings-article/sp/2024/313000a233/1WPcYUQqKwo">cite</a>)<br />
                             <b>Tillson Galloway,</b> Kleanthis Karakolios, Zane Ma, Roberto Perdisci, Angelos Keromytis, Manos Antonakakis<br />
                             <i><a href="https://sp2024.ieee-security.org/">45th IEEE Symposium on Security and Privacy</a>, May 2024</i>
@@ -77,19 +82,10 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <h4>Open-source Projects</h4>
-                    <ul>
-                        <li>
-                            <b>GitHound</b> (<a href="https://github.com/tillson/git-hound">GitHub</a>, <a href="finding-sensitive-information-on-github/">blog post</a>)<br />
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
                     <h4>Other Projects</h4>
                     <ul>
                         <li>
+                            <b>GitHound</b> (<a href="https://github.com/tillson/git-hound">GitHub</a>, <a href="finding-sensitive-information-on-github/">blog post</a>)<br />
                             <b>GitHound Explore</b> (<a href="https://githoundexplore.com">website</a>)<br />
                         </li>
                     </ul>
@@ -100,7 +96,7 @@
                     <h4>Talks</h4>
                     <ul>
                         <li>
-			    <b>New Frontiers in Github Secret Snatching</b>, <a href="https://www.reconvillage.org/talks-2022">DEFCON 30 Recon Village,</a> 2022
+			    			<b>New Frontiers in Github Secret Snatching</b>, <a href="https://www.reconvillage.org/talks-2022">DEFCON 30 Recon Village,</a> 2022
                         </li>
                     </ul>
                 </div>
@@ -151,7 +147,7 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-12 col-md">
-                    <small class="d-block mb-3 text-muted">Last updated August 2025 </small>
+                    <small class="d-block mb-3 text-muted">Last updated September 2025 </small>
                 </div>
             </div>
         </footer>
