--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h4>Publications</h4>
                     <ul>
                         <li>
-                            <b><a href="https://angelosk.github.io/Papers/2025/Atropos_Final.pdf" target="_blank">From Concealment to Exposure: Understanding the Lifecycle and Infrastructure of APT Domains</a></b> (<a href="https://scholar.google.com/scholar?hl=en&as_sdt=0%2C11&q=From+Concealment+to+Exposure%3A+Understanding+the+Lifecycle+and+Infrastructure+of+APT+Domains&btnG=#">cite</a>)<br />
+                            <b><a href="./Atropos_Final.pdf" target="_blank">From Concealment to Exposure: Understanding the Lifecycle and Infrastructure of APT Domains</a></b> (<a href="https://scholar.google.com/scholar?hl=en&as_sdt=0%2C11&q=From+Concealment+to+Exposure%3A+Understanding+the+Lifecycle+and+Infrastructure+of+APT+Domains&btnG=#">cite</a>)<br />
                             Athanasios Avgetidis, Aaron Faulkenberry, Vinny Adjibi, <b>Tillson Galloway</b>, Panagiotis Kintis, Omar Alrawi, Zane Ma, Fabian Monrose, Angelos D Keromytis, Roberto Perdisci, Manos Antonakakis<br />
                             <i><a href="https://raid2025.github.io/">2025 Research in Attacks, Intrusions and Defenses (RAID)</a>, October 2025</i>
                         </li>
