--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <h4>Talks</h4>
                     <ul>
 						<li>
-							<b>GenAI Attacks in 2025 - A Year in Review</b>, <a href="https://www.youtube.com/watch?v=2_-o5G6rGq0">BSides Charleston, </a>, 2025
+							<b>GenAI Attacks in 2025 - A Year in Review</b>, <a href="https://www.youtube.com/watch?v=2_-o5G6rGq0">BSides Charleston,</a> 2025
 						</li>
                         <li>
 			    			<b>New Frontiers in Github Secret Snatching</b>, <a href="https://www.reconvillage.org/talks-2022">DEFCON 30 Recon Village,</a> 2022
