Add custom styles for conference links in HTML

--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
 
 
     <link href="./css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		/* Conference links: plain text */
+i a {
+  color: #000;
+  font-weight: normal;
+  text-decoration: none;
+  pointer-events: auto; /* still clickable */
+}
+
+/* Optional: no hover styling */
+i a:hover {
+  text-decoration: none;
+}
+	</style>
 
 </head>
 
@@ -68,14 +82,13 @@
                     <h4>Publications</h4>
                     <ul>
                         <li>
-                        <li>
                             <b><a href="./ti-ecosystem-ndss.pdf" target="_blank">Actively Understanding the Dynamics and Risks of the Threat Intelligence Ecosystem</a></b> <br />
-                            <b>Tillson Galloway</b>, Allen Chang, Omar Alrawi, Thanos Avgetidis, Manos Antonakakis, Fabian Monrose
+                            <b>Tillson Galloway</b>, Allen Chang, Omar Alrawi, Thanos Avgetidis, Manos Antonakakis, Fabian Monrose <br />
                             <i><a href="https://raid2025.github.io/">Network and Distributed System Security (NDSS) Symposium</a>, February 2026</i>
                         </li>
                             <b><a href="./Atropos_Final.pdf" target="_blank">From Concealment to Exposure: Understanding the Lifecycle and Infrastructure of APT Domains</a></b> (<a href="https://scholar.google.com/scholar?hl=en&as_sdt=0%2C11&q=From+Concealment+to+Exposure%3A+Understanding+the+Lifecycle+and+Infrastructure+of+APT+Domains&btnG=#">cite</a>)<br />
                             Athanasios Avgetidis, Aaron Faulkenberry, Vinny Adjibi, <b>Tillson Galloway</b>, Panagiotis Kintis, Omar Alrawi, Zane Ma, Fabian Monrose, Angelos D Keromytis, Roberto Perdisci, Manos Antonakakis<br />
-                            <i><a href="https://raid2025.github.io/">2025 Research in Attacks, Intrusions and Defenses (RAID)</a>, October 2025</i>
+                            <i><a href="ndss-symposium.org/ndss2026">2025 Research in Attacks, Intrusions and Defenses (RAID)</a>, October 2025</i>
                         </li>
                         <li>
                             <b><a href="./sp2024winter-final30.pdf" target="_blank">Practical Attacks Against DNS Reputation Systems</a></b> (<a href="https://www.computer.org/csdl/proceedings-article/sp/2024/313000a233/1WPcYUQqKwo">cite</a>)<br />
