Update publication link in index.html

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ i a:hover {
                     <h4>Publications</h4>
                     <ul>
                         <li>
-                            <b>Actively Understanding the Dynamics and Risks of the Threat Intelligence Ecosystem</b> <br />
-                            <!-- <b><a href="./ti-ecosystem-ndss.pdf" target="_blank">Actively Understanding the Dynamics and Risks of the Threat Intelligence Ecosystem</a></b> <br /> -->
+                            <!-- <b>Actively Understanding the Dynamics and Risks of the Threat Intelligence Ecosystem</b> <br /> -->
+                            <b><a href="./ti-ecosystem-ndss.pdf" target="_blank">Actively Understanding the Dynamics and Risks of the Threat Intelligence Ecosystem</a></b> <br />
                             <b>Tillson Galloway</b>, Allen Chang, Omar Alrawi, Thanos Avgetidis, Manos Antonakakis, Fabian Monrose <br />
                             <i><a href="https://ndss-symposium.org/ndss2026/">Network and Distributed System Security (NDSS) Symposium</a>, February 2026</i>
                         </li>
